tests/parser/assignment/invalid_03.m.out
In invalid_03.m, line 2
|   [x
|     ^ error: expected A_KET, found NEWLINE instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
