tests/parser/assignment/invalid_03.m
function invalid_03()
  [x
   y] = size(1);
end
